--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -64,7 +64,7 @@
 
    
 <footer>
-    <p>Made by Tamirat <a href="https://github.com/Tamirat3"></a></p>
+   <p>copyright</p> 
 </footer>
 </body>
 </html>
