--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <header>
-        <ul>
-            <li><a href="tweets.html">home</a></li>
-        </ul>
+       
+            <a href="tweets.html">home</a>
+       
     </header>
 
     <main>
