--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -63,8 +63,8 @@
    
 
    
-<footer>
-   <p>copyright</p> 
-</footer>
+    <footer>
+        <p>Made by Ephrem <a href="https://github.com/Ephrem0001"></a></p>
+    </footer>
 </body>
 </html>
