--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -13,5 +13,35 @@
         <a href=""><img src="https://media.istockphoto.com/id/1400167045/photo/labradoodle-puppy-summer.webp?b=1&s=170667a&w=0&k=20&c=2kxrH7wGjBTeWHK1uqpeNDZ4-9e6CV6rkvvzoBaBofs="></a>
         <a href=""><img src="https://media.istockphoto.com/id/1344083371/photo/view-into-a-modern-guest-room-through-a-doorway.webp?b=1&s=170667a&w=0&k=20&c=MGQvij0KC1aOdg2AD9bppE6dleLtR-bDBShSz8js6qE="></a>
     </header>
+    <main>
+        <section>
+            <h2>TITLE</h2>
+            <P>3 WORDS</P>
+            <button>BUTTON</button>
+        </section>
+        <section>
+            <h2>TITLE</h2>
+               <section>
+                <img src="">
+                <h3>NAME</h3>
+                <P>SUB-TITLE</P>
+               </section>
+                    <section>
+                        <img src="">
+                        <h3>NAME</h3>
+                        <P>SUB-TITLE</P>
+                    </section>
+               <section>
+                <img src="">
+                <h3>NAME</h3>
+                <P>SUB-TITLE</P>
+               </section>
+                    <section>
+                        <img src="">
+                        <h3>NAME</h3>
+                        <P>SUB-TITLE</P>
+                    </section>
+        </section>
+    </main>
 </body>
 </html>
