--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -42,6 +42,16 @@
                         <P>SUB-TITLE</P>
                     </section>
         </section>
+        <section>
+                <section>
+                   <img src="">
+                        <section>
+                            <quote>QUOTE</quote>
+                            <blockquote>AUTHOR</blockquote>
+                            <P>SUB-TITLE</P>
+                        </section> 
+                </section>
+        </section>
     </main>
 </body>
 </html>
