--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -44,13 +44,76 @@
         </section>
         <section>
                 <section>
-                   <img src="">
+                   <img src="" alt="">
                         <section>
                             <quote>QUOTE</quote>
                             <blockquote>AUTHOR</blockquote>
                             <P>SUB-TITLE</P>
                         </section> 
                 </section>
+        </section>
+        <section>
+             <h2>TITLE</h2>
+                <section>
+                      <section>
+                        <img src="" alt="">
+                        <h3>TITLE</h3>
+                        <p>TEXT</p>
+                      </section>
+                      <section>
+                         <img src="" alt="">
+                         <h3>TITLE</h3>
+                      </section>
+                      <section>
+                        <img src="" alt="">
+                        <p>TEXT</p>
+                      </section>
+                </section>
+                    <section>
+                        <section>
+                            <img src="" alt="">
+                            <h3>TITLE</h3>
+                            <p>TEXT</p>
+                        </section>
+                        <section>
+                            <img src="" alt="">
+                            <h3>TITLE</h3>
+                        </section>
+                        <section>
+                            <img src="" alt="">
+                            <p>TEXT</p>
+                        </section>
+                    </section>
+                <section>
+                      <section>
+                        <img src="" alt="">
+                        <h3>TITLE</h3>
+                        <p>TEXT</p>
+                      </section>
+                      <section>
+                         <img src="" alt="">
+                         <h3>TITLE</h3>
+                      </section>
+                      <section>
+                        <img src="" alt="">
+                        <p>TEXT</p>
+                      </section>
+                </section>
+                    <section>
+                        <section>
+                            <img src="" alt="">
+                            <h3>TITLE</h3>
+                            <p>TEXT</p>
+                        </section>
+                        <section>
+                            <img src="" alt="">
+                            <h3>TITLE</h3>
+                        </section>
+                        <section>
+                            <img src="" alt="">
+                            <p>TEXT</p>
+                        </section>
+                    </section>
         </section>
     </main>
 </body>
