--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -115,6 +115,32 @@
                         </section>
                     </section>
         </section>
+        <section>
+            <h2>TITLE</h2>
+            <section>
+                <section>
+                    <img src="" alt="">
+                    <h3>TITLE</h3>
+                    <p>TEXT</p>
+                </section>
+                    <section>
+                        <img src="" alt="">
+                        <h3>TITLE</h3>
+                        <p>TEXT</p>
+                    </section>
+                <section>
+                    <img src="" alt="">
+                    <h3>TITLE</h3>
+                    <p>TEXT</p>
+                </section>
+                    <section>
+                        <img src="" alt="">
+                        <h3>TITLE</h3>
+                        <p>TEXT</p>
+                    </section>
+            </section>
+            <button>BUTTON</button>
+        </section>
     </main>
 </body>
 </html>
