--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -141,6 +141,31 @@
             </section>
             <button>BUTTON</button>
         </section>
+        <section>
+            <h2>TITLE</h2>
+            <section>
+                <section>
+                    <section>
+                        <h2>TITLE</h2>
+                        <P>TEXT</P>
+                    </section>
+                    <section>
+                        <h2>TITLE</h2>
+                        <P>TEXT</P>
+                    </section>
+                </section>
+                    <section>
+                        <section>
+                            <h2>TITLE</h2>
+                            <P>TEXT</P>
+                        </section>
+                        <section>
+                            <h2>TITLE</h2>
+                            <P>TEXT</P>
+                        </section>
+                    </section>
+            </section>
+        </section>
     </main>
 </body>
 </html>
