--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -9,9 +9,9 @@
     
     <header>
         <a href="">LOGO</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href=""><img src="https://media.istockphoto.com/id/1455779066/photo/small-and-large-dogs-standing-face-to-face.webp?b=1&s=170667a&w=0&k=20&c=oXvcxsP8CRbvi8Wev7lwc51kU-j2TCkpcqH_Fmn_tBM=" ></a>
-        <a href=""><img src="https://media.istockphoto.com/id/1400167045/photo/labradoodle-puppy-summer.webp?b=1&s=170667a&w=0&k=20&c=2kxrH7wGjBTeWHK1uqpeNDZ4-9e6CV6rkvvzoBaBofs="></a>
-        <a href=""><img src="https://media.istockphoto.com/id/1344083371/photo/view-into-a-modern-guest-room-through-a-doorway.webp?b=1&s=170667a&w=0&k=20&c=MGQvij0KC1aOdg2AD9bppE6dleLtR-bDBShSz8js6qE="></a>
+        <a href=""><img src="" ></a>
+        <a href=""><img src=""></a>
+        <a href=""><img src=""></a>
     </header>
     <main>
         <section>
@@ -167,5 +167,18 @@
             </section>
         </section>
     </main>
+    <footer>
+        <section>
+            <section>
+                <a href="">LOGO</a>
+                <section>
+                    <a href=""><img src="" alt="" ></a>
+                    <a href=""><img src="" alt="" ></a>
+                    <a href=""><img src="" alt="" ></a>
+                </section>
+            </section>
+            <p>TEXT</p>
+         </section>
+    </footer>
 </body>
 </html>
