--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -27,7 +27,7 @@
     <h3>heading3</h3>
     <a href="github.com"><img src="https://www.holbertonschool.com/holberton-logo.png" alt=""></a>  
         </article>
-        <aside>Placeholdet to add a comment here</aside>
+        <aside>Placeholder to add a comment here</aside>
         <article>
             <table>
                 <thead>
