--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -7,7 +7,7 @@
     <link href="base.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
 </head>
-<body>
+<body class="works_on_smartphone">
     <header>
        
             <a href="tweets.html">home</a>
@@ -66,7 +66,7 @@
 
    
     <footer>
-        <p>Made by Ephrem <a href="https://github.com/Ephrem0001"></a></p>
+        <p>Made by <a href="https://github.com/Ephrem0001">Ephrem</a></p>
     </footer>
 </body>
 </html>
