--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -13,15 +13,12 @@
             <a href="tweets.html">home</a>
        
     </header>
-
     <main>
         <article>
            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero ipsum amet veniam nemo voluptatibus exercitationem architecto adipisci placeat iste nobis, ex saepe officiis nostrum temporibus odio, ad tenetur sequi? Voluptate!</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, nostrum. Ut veritatis eum ipsa facilis dolore accusamus, hic molestiae dicta odio. Tempore expedita facilis maxime culpa cupiditate enim recusandae eius!</p>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio nesciunt quasi atque cum maiores. Repellat delectus quos tenetur maxime perferendis odit! Quis tempore pariatur odio magni exercitationem veritatis facilis facere!</p>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim iure delectus necessitatibus eos, nulla vitae placeat? Suscipit eos error voluptatum incidunt inventore, blanditiis rem mollitia fugiat amet qui debitis quia?</p>
-
-
     <h1>heading1</h1>
     <h2>heading2</h2>
     <h3>heading3</h3>
@@ -29,7 +26,7 @@
         </article>
         <aside>Placeholder to add a comment here</aside>
         <article>
-            <table>
+            <table class="table">
                 <thead>
                     <tr>
                     <th>Name</th>
@@ -66,7 +63,7 @@
 
    
     <footer>
-        <p>Made by <a href="https://github.com/Ephrem0001">Ephrem</a></p>
+        <p class="efa">Made by <a href="https://github.com/Ephrem0001">Ephrem</a></p>
     </footer>
 </body>
 </html>
